Athena and AthenaQuery classes.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,6 @@
 
 [pytest]
 filterwarnings =
-    # Fail on warnings by default
     error
-    # Ignore deprecation warnings.
     ignore::DeprecationWarning
+    ignore:unclosed <ssl.SSLSocket *:ResourceWarning
