--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py36,py37,py38,pypy3,lint
 [testenv]
 deps = pytest
 commands = python -m pytest {posargs}
-passenv = PALLAS_OUTPUT_LOCATION
+passenv = TEST_PALLAS_*
 
 [testenv:lint]
 basepython = python3.6
