Add type annotations. Drop support for Python 3.6.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 
 [tox]
-envlist = py36,py37,py38,pypy3,lint
+envlist = py37,py38,lint,typecheck
 
 [testenv]
 deps = pytest
@@ -8,7 +8,13 @@ commands = python -m pytest {posargs}
 passenv = TEST_PALLAS_*
 
 [testenv:lint]
-basepython = python3.6
+basepython = python3.7
 skip_install = true
 deps = flake8
 commands = flake8
+
+[testenv:typecheck]
+basepython = python3.7
+skip_install = true
+deps = mypy
+commands = mypy
