Run integration tests using one Python version only.

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,15 @@
 
 [tox]
-envlist = lint,typecheck,py37,py38
+envlist = lint,typecheck,py37,py38,integration
 
 [testenv]
 deps = pytest
-commands = python -m pytest {posargs}
+commands = python -m pytest {posargs} tests/unit/
+
+[testenv:integration]
+basepython = python3.7
+deps = pytest
+commands = python -m pytest {posargs} tests/integration/
 passenv = TEST_PALLAS_*
 
 [testenv:lint]
