Revert unit/integration test split.

--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,10 @@
 
 [tox]
-envlist = lint,typecheck,py37,py38,integration
+envlist = lint,typecheck,py37,py38
 
 [testenv]
 deps = pytest
-commands = python -m pytest {posargs} tests/unit/
-
-[testenv:integration]
-basepython = python3.7
-deps = pytest
-commands = python -m pytest {posargs} tests/integration/
+commands = python -m pytest {posargs}
 passenv = TEST_PALLAS_*
 
 [testenv:lint]
