Refactor test setup.

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = lint,typecheck,py37,py38
 [testenv]
 deps = pytest
 commands = python -m pytest {posargs}
-passenv = TEST_PALLAS_*
+passenv = PALLAS_TEST_*
 
 [testenv:lint]
 basepython = python3.7
