Conversion of results to pandas DataFrame.

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist = lint,typecheck,py37,py38
 
 [testenv]
 deps = pytest
+extras = pandas
 commands = python -m pytest {posargs}
 passenv = PALLAS_TEST_*
 
