--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 [tox]
-envlist = lint,typecheck,py37,py38
+envlist = lint,typecheck,py37,py38,docs
 isolated_build = True
 
 [testenv]
@@ -33,3 +33,11 @@ basepython = python3.7
 skip_install = true
 deps = mypy
 commands = mypy
+
+[testenv:docs]
+basepython = python3.7
+usedevelop = true
+changedir = docs
+deps = -r docs/requirements.txt
+commands =
+    sphinx-build -W -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
