Enforce formatting using Black and isort.

--- a/tox.ini
+++ b/tox.ini
@@ -25,8 +25,14 @@ passenv = PALLAS_TEST_*
 [testenv:lint]
 basepython = python3.7
 skip_install = true
-deps = flake8
-commands = flake8
+deps =
+    black
+    isort
+    flake8
+commands =
+    black --check setup.py src/ tests/
+    isort --check setup.py src/ tests/
+    flake8
 
 [testenv:typecheck]
 basepython = python3.7
