Add tox env to format code using Black and isort.

--- a/tox.ini
+++ b/tox.ini
@@ -47,3 +47,14 @@ changedir = docs
 deps = -r docs/requirements.txt
 commands =
     sphinx-build -W -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
+
+
+[testenv:format]
+basepython = python3.7
+skip_install = true
+deps =
+    black
+    isort
+commands =
+    isort setup.py src/ tests/
+    black setup.py src/ tests/
