Show diff when code should be reformatted by Black or isort.

--- a/tox.ini
+++ b/tox.ini
@@ -30,8 +30,8 @@ deps =
     isort
     flake8
 commands =
-    black --check setup.py src/ tests/
-    isort --check setup.py src/ tests/
+    black --check --diff setup.py src/ tests/
+    isort --check --diff setup.py src/ tests/
     flake8
 
 [testenv:typecheck]
