Test with Python 3.9 and Python 3.10

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 [tox]
-envlist = lint,typecheck,py37,py38,docs
+envlist = lint,typecheck,py37,py38,py39,py310,docs
 isolated_build = True
 
 [testenv]
