Fix environment variables not passed to tests from tox.

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ isolated_build = True
 deps = pytest
 extras = pandas
 commands = python -m pytest {posargs}
-passenv = PALLAS_TEST_*
+passenv = TEST_PALLAS_*
 
 [testenv:lint]
 basepython = python3.7
